# fastroom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  on-create.sh  post-create.sh
.github/ISSUE_TEMPLATE/: bug_issue_template.yaml  feature_issue_template.yaml
.github/workflows/: frontend-ci.yaml  python-lint-format.yaml  python-static-analysis.yaml  python-unit-tests.yaml
backend/: .dockerignore  Dockerfile.api  README.md  alembic.ini  pyproject.toml
backend/migrations/: README  env.py
backend/migrations/versions/: fe9b65378cc0_initial_migration.py
backend/src/fast_room_api/: __init__.py  logging_config.py
backend/src/fast_room_api/api/: dependencies.py  main.py
backend/src/fast_room_api/api/routers/: auth.py  rooms.py  users.py  ws.py
backend/src/fast_room_api/models/: auth.py  config.py  db.py  rooms.py  ws.py
backend/src/tests/: conftest.py
backend/src/tests/unit/: test_auth_routes.py  test_connection_manager.py  test_dependencies_tokens.py  test_refresh_flow.py  test_rooms_crud.py  test_sanitize_username.py  test_users_routes.py
frontend/: Dockerfile.web  README.md  eslint.config.cjs  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  router.ts
frontend/src/components/: ChatRoom.vue  ChatRoomInput.vue  ChatRoomMessages.vue  ChatRoomSideBar.vue  ChatRoomToasts.vue
frontend/src/pages/: Home.vue  Login.vue  Profile.vue  Register.vue  RoomDetail.vue  Rooms.vue
frontend/src/plugins/: authClient.ts
frontend/src/stores/: auth.ts
frontend/src/utils/: useAuthedWSClient.ts  wsClient.ts
